force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequest__c/vlocity_ins__InsuranceAsyncBulkRequest__c.object-meta.xml
<CustomObject>
    <description>The entity contains bulk asynchronous procesing requests. For example - BulkPolicyCancellation or Bulk Enrollment etc.</description>
    <label>Insurance Async Bulk Request</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Async Bulk Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>