force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequest__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The insurance related object that&apos;s associated with the request.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Async Request Account</relationshipLabel>
    <relationshipName>AsyncRequest_Account</relationshipName>
    <type>Lookup</type>
</CustomField>