force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequest__c/fields/vlocity_ins__AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdditionalInformation__c</fullName>
    <description>The information about the jobs processed for the request.</description>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>