force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequest__c/fields/vlocity_ins__FailedJobCount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FailedJobCount__c</fullName>
    <description>The count of failed apex async jobs for the insurance request.</description>
    <label>Failed Job Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>