force-app/main/default/objects/vlocity_ins__InsuranceAsyncBulkRequest__c/fields/vlocity_ins__JobCount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__JobCount__c</fullName>
    <description>The count of apex async jobs created for the insurance request.</description>
    <label>Job Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>